# AshareSop

./: .dockerignore  .env.davis.template  .env.template  .gitignore  AGENTS.md  README.md  SPEC.md  docker-compose.davis.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
dashboard/: next.config.ts  package-lock.json  package.json
davis_analyzer/: AGENTS.md  README.md  SOP.md  __init__.py  __main__.py  backtest.py  backtest_factors.py  backtest_report.py  checklist_generator.py  cli.py  config.py  constants.py  distress.py  dividend.py  financial_fetcher.py  forecast.py  holder_concentration.py  market_regime.py  migrate_cache.py  migrate_to_market_db.py  momentum.py  pipeline.py  price_estimator.py  profitability.py  prosperity.py  prosperity_inflection.py  prosperity_sector.py  report_generator.py  rescorer.py  scoring.py  sector_pipeline.py  stock_universe.py  strategy_signal.py  sub_industry.py  templates.py  trend.py  tushare_client.py  types.py  valuation.py  valuation_forward.py
davis_webui/: README.md  start.sh
docker/: DEPLOY.md  backend.Dockerfile  davis-backend.Dockerfile  davis-frontend.Dockerfile  davis-tunnel.Dockerfile  frontend.Dockerfile  load-images.sh  save-images.sh
docs/: AIDC液冷散热产业深度研报.md  AI应用赛道总结式研报.md  A股AI应用赛道全景研报.md  A股四维系统框架方法论深度研报.md  A股多因子量化选股方法论深度研报.md  A股抓主线四工具框架方法论深度研报.md  A股投资方法论体系总结式研报.md  A股景气度投资方法论深度研报.md  A股行业轮动方法论深度研报.md  README.md  SST固态变压器产业链深度研报.md  ai-compute-landscape-report.md  ai-raw-materials-supply-chain.md  aidc产业链深度报告.md  architecture.md  development.md  domain-model.md  faraday-rotator-sipho-supply-chain.html  fiber-optics-comparison.html  ganfeng-lithium-deep-dive.html  ganfeng-lithium-deep-dive.md  github-agent-skills.html  github-agent技能.md  google-tpu-deep-dive.md  hbm内存产业链深度研报.md  hotspot-discovery-milestone.md  key-targets-deep-dive.md  m9-quartz-cloth-supplement.md  microled-optical-communication.html  microled光通信.md  montage-tech-analysis.md  montage-tech-deep-dive.md  mvp.md  optical-communication-comparison.html  万兴科技深度研报.md  (+62 more)
(+771 files in other folders)
