[project]
name = "stockhot"
version = "0.1.0"
description = "A股每日热点分析工具，自动采集市场数据并生成可视化报告"
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
requests = "^2.31.0"
pandas = "^2.1.0"
sqlite-utils = "^3.35"
Pillow = "^10.2.0"
APScheduler = "^3.10.4"
openai = "^1.12.0"
python-dateutil = "^2.8.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"

[project.optional-dependencies]
dev = 
    pytest = "^8.0.0"
    pytest-cov = "^4.1.0"
    black = "^24.2.0"
    ruff = "^0.2.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]